# api/src/handlers/authentication_handler.rs
@@ -1,25 +1,29 @@
+use crate::middlewares::auth::{RequireAuth, SpecificTokenValidator};
+use crate::models::post_models::{LoginUserPostModel, RegisterUserPostModel, ResetPasswordPostModel, ResetPasswordRequestPostModel, ValidateMFACodePostModel};
 use actix_web::cookie::{CookieBuilder, SameSite};
 use actix_web::{post, web, HttpMessage, HttpRequest, HttpResponse, ResponseError};
+use application::authentication::codes::generate_random_code;
 use application::authentication::password_reset::request_password_reset;
 use application::authentication::tokens::encode_token;
-use chrono::{Duration, Utc};
-use garde::Validate;
-use uuid::Uuid;
-
-use crate::middlewares::auth::{RequireAuth, SpecificTokenValidator};
-use crate::models::post_models::{LoginUserPostModel, RegisterUserPostModel, ResetPasswordPostModel, ResetPasswordRequestPostModel};
 use application::database::config::create_user_config;
+use application::database::mfa_codes::{create_mfa_code, get_mfa_code_by_id};
 use application::database::tokens::update_token;
 use application::database::user_passwords::{create_user_password, get_user_password_by_user_id, update_user_password};
-use application::database::users::{create_user, get_user_by_email, get_user_by_username};
+use application::database::users::{create_user, get_user_by_email, get_user_by_id, get_user_by_username};
+use application::mail::send::{build_mail, send_mail, MailProps};
+use chrono::{Duration, Utc};
 use domain::models::config::{Alert, NewUserConfig};
+use domain::models::mfa_codes::NewMfaCode;
 use domain::models::tokens::UpdatedToken;
 use domain::models::user_passwords::{NewUserPassword, UpdatedUserPassword};
 use domain::models::users::{NewUser, User};
+use garde::Validate;
 use infrastructure::DBPool;
 use shared::app_state_model::AppState;
 use shared::error_models::{APIError, DBError, InternalError, ServerError, UnauthorizedError, UserError};
 use shared::token_models::UserClaims;
+use std::env;
+use uuid::Uuid;
 
 /// Register a new user
 ///
@@ -129,9 +133,9 @@ async fn register_route(
     }
 }
 
-/// Login a user
+/// Login a user and send a code
 ///
-/// This endpoint allows users to log in to their account.
+/// This endpoint allows users to init log in to their account and send a code to authenticate.
 #[utoipa::path(
     post,
     path = "/login",
@@ -143,7 +147,7 @@ async fn register_route(
         content_type = "application/json"
     ),
     responses(
-        (status = 200, description = "Login successful", body = String),
+        (status = 200, description = "1st step of login successful", body = Uuid),
         (status = 401, description = "Unauthorized", body = UnauthorizedError, example = json!("Unauthorized")),
         (status = 500, description = "Internal Server Error", body = InternalError, example = json!("InternalError")),
     )
@@ -154,11 +158,6 @@ async fn login_route(
     info: web::Json<LoginUserPostModel>,
 ) -> HttpResponse {
     let result = web::block(move || {
-        let config = {
-            let config_guard = data.config.read();
-            config_guard.clone()
-        };
-
         let conn: DBPool = data.database_pool.clone().as_ref().clone();
         let credentials = info.into_inner();
 
@@ -179,22 +178,132 @@ async fn login_route(
             },
         };
 
-        let now = Utc::now();
-        let expiration = now + Duration::hours(config.jwt_config.expires_in.parse::<i64>().unwrap());
+        // Generate MFA Code
+        let code = generate_random_code(6);
+        let new_mfa_code = NewMfaCode {
+            user_id: user.id,
+            code: code.clone(),
+            exp: None,
+        };
+        let mfa_code_id = create_mfa_code(&conn, new_mfa_code)?;
+
+        // Send email
+        let web_url = env::var("WEB_URL").unwrap_or("http://localhost:3000".to_string());
+        let url = format!("{}/login/code/{}", web_url, mfa_code_id);
+        let mail = build_mail(MailProps {
+            from: "Bitbox <no-reply@sigma-bot.fr>".to_string(),
+            to: user.email.clone(),
+            subject: "Authentication Code".to_string(),
+            body: format!(
+                "Here's the code to enter to authenticate : {}",
+                code
+            ),
+        });
+        send_mail(&data.smtp_transport.as_ref(), mail)?;
+
         if bcrypt::verify(&credentials.password, &user_password.password)? {
-            let claim = UserClaims{
-                sub: user.id,
-                iat: now.timestamp() as usize,
-                exp: expiration.timestamp() as usize,
-                token_version: user.token_version,
-            };
-            let token = encode_token::<UserClaims>(&claim, &config)?;
-            Ok(token)
+            Ok(mfa_code_id)
         } else {
             Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError)))
         }
     }).await;
 
+    // match result {
+    //     Ok(user) => match user {
+    //         Ok(token) => {
+    //             let cookie = CookieBuilder::new("token", token)
+    //                 .http_only(false)
+    //                 .secure(false)
+    //                 .same_site(SameSite::Strict)
+    //                 .path("/")
+    //                 .finish();
+    //             HttpResponse::Ok().cookie(cookie).finish()
+    //         },
+    //         Err(err) => err.error_response(),
+    //     },
+    //     Err(_) => ServerError::InternalError(InternalError).error_response()
+    // }
+    match result {
+        Ok(id) => match id {
+            Ok(id) => HttpResponse::Ok().json(id),
+            Err(err) => err.error_response(),
+        },
+        Err(_) => ServerError::InternalError(InternalError).error_response()
+    }
+}
+
+/// Validate MFA Code
+///
+/// This endpoint allows users to validate their MFA code and finally log in into their account.
+#[utoipa::path(
+    post,
+    path = "/login/code/{id}",
+    tag = "Authentication",
+    context_path = "/auth",
+    params(
+        ("id" = Uuid, description = "The MFA code id to authenticate")
+    ),
+    request_body(
+        content = ValidateMFACodePostModel,
+        description = "The MFA code to log in",
+        content_type = "application/json"
+    ),
+    responses(
+        (status = 200, description = "Login successful", body = String),
+        (status = 400, description = "Bad Request", body = ValidationError),
+        (status = 401, description = "Unauthorized", body = UnauthorizedError),
+        (status = 500, description = "Internal Server Error", body = InternalError, example = json!("InternalError")),
+    )
+)]
+#[post("/login/code/{id}")]
+async fn validate_mfa_code_route(
+    data: web::Data<AppState>,
+    mfa_code_id: web::Path<Uuid>,
+    given_code: web::Json<ValidateMFACodePostModel>,
+) -> HttpResponse {
+    let result = web::block(move || {
+        let conn: DBPool = data.database_pool.clone().as_ref().clone();
+        let config = {
+            let config_guard = data.config.read();
+            config_guard.clone()
+        };
+
+        let mfa_code_id = mfa_code_id.into_inner();
+
+        let mfa_code = get_mfa_code_by_id(&conn, mfa_code_id)?;
+
+        // Check if code is correct
+        if mfa_code.code != given_code.code {
+            println!("2");
+            return Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError)));
+        }
+
+        // Check if code is expired
+        if mfa_code.exp < Utc::now().naive_utc() - Duration::hours(2) {
+            println!("Exp : {}", mfa_code.exp);
+            println!("{}", Utc::now().naive_utc() - Duration::hours(2));
+            println!("1");
+            return Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError)));
+        }
+
+        // Get user
+        let user = get_user_by_id(&conn, mfa_code.user_id)?;
+        println!("3");
+
+        // Generate token
+        let now = Utc::now();
+        let expiration = now + Duration::hours(config.jwt_config.expires_in.parse::<i64>().unwrap());
+        let claim = UserClaims{
+            sub: user.id,
+            iat: now.timestamp() as usize,
+            exp: expiration.timestamp() as usize,
+            token_version: user.token_version,
+        };
+        println!("4");
+        let token = encode_token::<UserClaims>(&claim, &config)?;
+
+        Ok(token)
+    }).await;
     match result {
         Ok(user) => match user {
             Ok(token) => {
@@ -365,6 +474,7 @@ pub fn auth_config(cfg: &mut web::ServiceConfig) {
         web::scope("/auth")
             .service(register_route)
             .service(login_route)
+            .service(validate_mfa_code_route)
             .service(request_reset_password_route)
     );
 }
